# gameplateform

./: .dockerignore  .gitignore  ARCHITECTURE.md  DEPLOY.md  Dockerfile  GITHUB-SETUP.md  INSTALLATION.md  PORTAINER-GUIDE.md  QUICK-START-DOCKER.md  README-DOCKER.md  README.md  docker-compose.portainer.yml  docker-compose.yml  generate-random-ports.ps1  generate-random-ports.sh  index.html  nginx.conf  package.json  portainer-stack.yml  push-to-github.ps1  push-to-github.sh  start-docker.ps1  start-docker.sh  vite.config.ts
backend/: Dockerfile  README.md  package.json
backend/src/: server.js
scripts/: generate-icons.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: CollectionView.tsx  CommonGamesModal.tsx  FriendCard.tsx  FriendsView.tsx  GameCard.tsx  GameGrid.tsx  SettingsView.tsx  Sidebar.tsx
src/services/: api.ts
src/store/: gameStore.ts
src/utils/: platformIntegrations.ts  tauri-stub.ts
